--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -107,6 +107,7 @@
             <include layout="@layout/view_line"/>
 
             <LinearLayout
+			    android:id="@+id/lay_mode"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
